# numpypi

./: .gitignore  .travis.yml  Approximating intrinsic functions.ipynb  Calculation of sin(x).ipynb  Calculation of tan(x).ipynb  Demo numpi_series.ipynb  Demo numpi_trunc.ipynb  Demo pnumpy.ipynb  LICENSE.md  Makefile  README.md  numpi_series.py  numpi_trunc.py  numpypi_series.py  numpypi_trunc.py  pintrinsics.py  pnumpy.py  pypi.py  setup.cfg  setup.py  test.md5  test.py  test1.cdf  test2.cdf  test_series.py  test_trunc.py
.github/workflows/: base.yml  basic_tests.yml
notebooks/: Calculation of sin(x).ipynb  Demo numpi_series.ipynb
numpypi/: __init__.py  ignore_this.py  numpypi_series.py  numpypi_trunc.py
numpypi/numpypi.egg-info/: PKG-INFO  top_level.txt
tests/: test_series.py  test_trunc.py
