[metadata]
name = numpypi
version = 0.0.1
author = Alistair Adcroft
description = Portable intrinsics for numpy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adcroft/numpypi
project_urls =
    Bug Tracker = https://github.com/adcroft/numpypi/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
python_required = >=3.6
install_requires=
    numpy

[options.packages.find]
where = .
